# kustomize-grep

./: .gitignore  .pylintrc  README.md  k8grep.py  k8s-grep  k8s_grep.py  kustomize-grep  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
k8grep/: __init__.py  k8grep.py
src/k8s_grep/: __init__.py  k8s_grep.py
tests/: object_stream_test.py
tests/ldap/base/: kustomization.yaml
tests/simple-app/: simple-app-deployment.yaml  simple-app-ingress.yaml  simple-service.yaml
