[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k8grep"
authors = [
   { name="Andrey Zax", email="andrey.zax@gmail.com" },
   { name="Gilad Sharaby", email="giladsh1@gmail.com" },
]
description = "k8grep is a tool that lets you filter specific resources from a collection of Kubernetes YAML manifests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "pyyaml", "shtab" ]
classifiers = [
   "Development Status :: 4 - Beta",
   "Environment :: Console",
   "Intended Audience :: System Administrators",
   "Intended Audience :: Developers",
   "Intended Audience :: Information Technology",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: POSIX",
   "Operating System :: Microsoft :: Windows",
   "Programming Language :: Python :: 3",
   "Topic :: Software Development :: Pre-processors",
   "Private :: Do Not Upload",
]
dynamic=["version"]

[project.scripts]
k8grep = "k8grep:main"

[project.urls]
"Homepage" = "https://github.com/andreyzax/k8s-grep"
"Bug Tracker" = "https://github.com/andreyzax/k8s-grep/issues"

[tool.hatch.version]
source = "code"
path = "k8grep/__version__.py"
[tool.ruff]
target-version = "py310"
line-length = 180

[tool.ruff.lint]
select = [ "F", "E", "W", "I", "D", "SIM", "B" ]
